# advanced-agentic-rag-langgraph

./: .dockerignore  .env.example  .gitignore  Advanced_Agentic_RAG.ipynb  CLAUDE.md  Dockerfile  HANDOVER.md  HyDE RAG implementation.md  README.md  langgraph.json  main.py  pyproject.toml  test_adaptive_retrieval.py  test_document_profiling.py  test_pdf_pipeline.py
.claude/: settings.local.json
evaluation/: README.md  architecture_comparison_report.md  architecture_comparison_results.json  baseline_metrics.json  golden_set.json  golden_set_hard.json  golden_set_hard_v2.json  golden_set_standard.json  golden_set_standard_v2.json  tier_comparison_report.md  tier_comparison_results.json
infra/: main.bicep  parameters.json
references/: Agentic RAG_ Definition and Core Characteristics.md  Best Practices for Document Profiling and Metadata Extraction in RAG Pipelines.md  Best Practices for Evaluating Retrieved RAG Documents.md  Best Practices for LLM Prompts in RAG Pipelines.md  Best Practices for LLM-Based Retrieval Quality Evaluation in RAG Systems.md  Best Practices for LLM-as-Judge Reranking in RAG Pipelines.md  Best Practices for Merging and Ranking Documents in Multi-Agent RAG Systems.md  Best Practices for Query Rewriting and Query Expansion in RAG Pipelines.md  CLAUDE.md  Configurable Model Tier System - Model-Specific vs Model-Agnostic Prompts.md  CrossEncoder Implementation.md  HHEM-2.1-Open Guide.md  Latency-Focused Deep Dive - GPT-4o-mini vs GPT-5 mini for Budget Tier.md  Marker PDF Parsing - Complete Implementation Guide.md  Model Selection and Tier Optimization for Advanced Agentic RAG.md  Multi-Agent RAG.md  NLI-Based Hallucination Detection for RAG - Best Practices and Production Strategies.md  Python `__pycache__` Best Practices.md  RAG Answer Evaluation & Regeneration Best Practices.md  RAG Golden Dataset Creation for Technical Document.md  RAGAS Integration with LangGraph for python RAG pipeline.md  RAG_OCR_Research_papers.md  Research-Backed Best Practices for Self-Correction and Retry Mechanisms in RAG Systems.md  Retrieval Optimization vs. Semantic Evaluation.md  When Re-Retrieval is Actually Beneficial.md  (+1 more)
(+150 files in other folders)
